# agent-lib

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  PLAN.md  README.md  TODO.md
crates/agent-testkit/: Cargo.toml
crates/agent-testkit/src/: assertions.rs  cassette.rs  concurrency.rs  external.rs  fixtures.rs  handlers.rs  harness.rs  ids.rs  lib.rs  machine.rs  prelude.rs  scenario.rs  scope.rs  script.rs  subagent.rs
crates/agent-testkit/src/assertions/: budget.rs  calls.rs  conversation.rs  done.rs  external.rs  mod.rs  notifications.rs  requirements.rs  trace.rs
crates/agent-testkit/src/cassette/: mod.rs  record.rs  replay.rs
crates/agent-testkit/src/subagent/: tests.rs
crates/agent-testkit/tests/: agent_replay_approval.rs  agent_replay_text.rs  agent_replay_tool.rs  cassette_replay.rs  smoke.rs
crates/agent-testkit/tests/cassettes/: agent_text_turn.json  agent_tool_approval_roundtrip.json  agent_tool_error_roundtrip.json  agent_weather_tool_roundtrip.json
docs/: TESTABILITY.md  agent-effect-migration.md  agent-effect-model.md  agent-layer.md  capability-matrix.md  client-layer-references.md  complex-tests.md  conversation-core.md  effect-refine.md  external-agent.md  facade-api.md  genai-probe-findings.md  mag-gaps.md  managed-external-agent.md  openai-chat-api.md  refine.md  review-2026-07.md
docs/archive/2026-07-13-agent-layer/: PLAN.md  TODO.md
docs/archive/2026-07-13-client-layer/: TODO.md
docs/archive/2026-07-13-conversation/: PLAN.md  TODO.md
docs/archive/2026-07-14-agent-effect-migration/: TODO.md
docs/archive/2026-07-15-agent-testability/: PLAN.md  TODO.md
docs/archive/2026-07-17-managed-external-agent/: PLAN.md  TODO.md
docs/archive/2026-07-18-facade-api/: PLAN.md
docs/archive/2026-07-19-refine/: TODO.md
docs/archive/2026-07-19-review-fixes/: PLAN.md  TODO.md
docs/archive/2026-07-20-mag-gaps/: PLAN.md  TODO.md
docs/archive/2026-07-23-openai-chat/: PLAN.md  TODO.md
examples/: agent_chat.rs  conversation_core.rs  external_cli_spike.rs  managed_claude_code.rs  managed_codex.rs  managed_mixed.rs  managed_opencode.rs  non_streaming.rs  streaming_typewriter.rs  tool_round_trip.rs
examples/support/: managed.rs  mod.rs
memory/: claude_plan.md
src/: lib.rs  prelude.rs
src/adapter/: http.rs  mod.rs
src/adapter/anthropic/: mod.rs  request.rs  response.rs
src/adapter/anthropic/request/: tests.rs
src/adapter/anthropic/stream/: decoder.rs  mod.rs  normalizer.rs  usage.rs  wire.rs
src/adapter/common/: http.rs  json.rs  mod.rs  request.rs  sse.rs
src/adapter/openai_chat/: mod.rs  request.rs  response.rs
src/adapter/openai_chat/request/: input.rs  tests.rs
src/adapter/openai_chat/response/: convert.rs
src/adapter/openai_chat/stream/: decoder.rs  mod.rs  normalizer.rs  wire.rs
src/adapter/openai_resp/: mod.rs  request.rs  response.rs
src/adapter/openai_resp/request/: input.rs  tests.rs
src/adapter/openai_resp/response/: convert.rs
src/adapter/openai_resp/stream/: decoder.rs  mod.rs  (+1 more)
src/agent/: approval.rs  context.rs  drive.rs  effect_manifest.rs  event.rs  id.rs  interaction.rs  loop_driver.rs  machine.rs  mod.rs  permission.rs  request.rs  requirement.rs  spec.rs  state.rs  tool.rs
src/agent/collab/: blackboard.rs  mailbox.rs  mod.rs  plan.rs  tests.rs  tools.rs
src/agent/context/: budget.rs  cancel.rs  tests.rs  trace.rs
src/agent/drive/: reference.rs  subagent.rs  tests.rs
src/agent/loop_driver/: default.rs
src/agent/machine/: default.rs  mod.rs  nested.rs
src/agent/state/: cursor.rs  queue.rs  runtime.rs  tests.rs
src/client/: capability.rs  config.rs  error.rs  mod.rs  request.rs  response.rs  tests.rs
src/client/error/: tests.rs
src/conversation/: boundary.rs  config.rs  error.rs  history.rs  id.rs  message.rs  mod.rs  turn.rs  validation.rs
src/conversation/boundary/: fork.rs  head.rs
src/conversation/history/: index.rs
src/conversation/pending/: cancel.rs  message.rs  mod.rs  turn.rs
src/conversation/persistence/: mod.rs  rows.rs  snapshot.rs  tests.rs
src/conversation/projection/: artifact.rs  compaction.rs  mod.rs  strategy.rs  tests.rs
src/conversation/turn/: tests.rs
src/conversation/validation/: identity.rs  pairing.rs  sequence.rs  tests.rs
src/facade/: agent.rs  approval.rs  chat.rs  collab.rs  config.rs  delegate.rs  error.rs  external.rs  ids.rs  mod.rs  run.rs  tool.rs
src/facade/agent/: builder.rs  dispatch.rs  reconfig.rs  snapshot.rs  snapshot_tests.rs  stream.rs  tests.rs
src/facade/chat/: stream.rs  tests.rs
src/facade/config/: tests.rs
src/facade/delegate/: handler.rs  model_routed_tests.rs  tests.rs
src/facade/run/: tests.rs
src/model/: content.rs  extras.rs  message.rs  mod.rs  normalized.rs  tool.rs  usage.rs
src/model/content/: serialization.rs  serialization_tests.rs
src/stream/: accumulator.rs  mod.rs
src/stream/accumulator/: mod.rs
tests/: agent_acp_adapter_drain.rs  agent_acp_cassette.rs  agent_claude_code_cassette.rs  agent_codex_cassette.rs  agent_complex_cancel.rs  agent_complex_flow.rs  agent_complex_subagent.rs  agent_complex_support.rs  agent_driver_basic.rs  agent_effect_e2e.rs  agent_external_basic.rs  agent_external_cassette.rs  agent_external_interaction.rs  agent_external_lifecycle.rs  agent_external_managed_real_e2e.rs  agent_external_permission.rs  agent_external_real_e2e.rs  agent_external_scripted.rs  agent_external_subagent.rs  agent_interaction_basic.rs  agent_mixed_scheduler.rs  agent_opencode_cassette.rs  agent_step_basic.rs  agent_tool_adapter.rs  agent_tool_basic.rs  agent_trace_budget_basic.rs  capability_escape_hatches.rs  conversation_adapter_compat.rs  conversation_state_machine.rs  external_acp.rs  external_claude_code.rs  external_codex.rs  external_opencode.rs  integration_anthropic.rs  integration_normalization.rs  integration_openai_chat.rs  integration_openai_resp.rs  reference_driver.rs
tests/complex_support/: assertions.rs  mod.rs  plan_blackboard.rs  tools.rs
tests/conversation_state_machine/: assertions.rs  support.rs
tests/normalization/: assertions.rs  config.rs  mod.rs  scenarios.rs
(+134 files in other folders)
