[workspace]
members = [".", "crates/agent-testkit"]
resolver = "3"

[package]
name = "agent-lib"
version = "0.1.0"
edition = "2024"

[features]
# Enables the managed Claude Code runtime adapter (launch config + capability
# probe, with the stream decoder and live session added in later milestones).
# Off by default so the core crate pulls in no CLI-adapter machinery unless a
# host opts in; the probe reuses tokio's process support, so enabling it adds no
# new heavy dependency.
external-claude-code = []
# Enables the managed Codex runtime adapter (launch config + capability probe;
# the stream decoder and live session follow in later milestones). Off by
# default so the core crate pulls in no CLI-adapter machinery unless a host opts
# in; the probe reuses tokio's process support, so enabling it adds no new heavy
# dependency.
external-codex = []
# Enables the managed OpenCode runtime adapter (launch config + capability probe;
# the stream decoder and live session follow in later milestones). Off by
# default so the core crate pulls in no CLI-adapter machinery unless a host opts
# in; the probe reuses tokio's process support, so enabling it adds no new heavy
# dependency.
external-opencode = []

[dependencies]
async-trait = "0.1"
eventsource-stream = "0.2.3"
futures = "0.3"
httpdate = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde"] }

[dev-dependencies]
# Dev-only agent-effect test infrastructure. This forms a dependency cycle
# through a dev-dependency (agent-testkit -> agent-lib), which Cargo permits
# because dev-dependencies are excluded from the normal library build.
agent-testkit = { path = "crates/agent-testkit" }

# Managed-external examples. Each drives a real coding-agent CLI the managed way
# (ExternalAgentMachine + scoped ExternalSessionHandler), so it is gated behind
# the matching adapter feature; without it Cargo skips the target, keeping the
# default `cargo check --examples` / `cargo test --all --all-targets` free of any
# CLI-adapter machinery. The shared wiring lives in `examples/support/managed.rs`.
[[example]]
name = "managed_claude_code"
required-features = ["external-claude-code"]

[[example]]
name = "managed_codex"
required-features = ["external-codex"]

[[example]]
name = "managed_opencode"
required-features = ["external-opencode"]

[[example]]
name = "managed_mixed"
required-features = ["external-claude-code", "external-codex"]
