[package]
name = "agent-testkit"
version = "0.1.0"
edition = "2024"
publish = false
description = "Dev-only testing infrastructure for agent-lib's agent effect layer."

[dependencies]
agent-lib = { path = "../.." }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde"] }
